grammar.js
    module: $ => seq(
      optional($.module_doc_comment),
      optional($.moduleTk),
      optional($.prelude),
      repeat($.import),
      repeat($._command),
    ),

    _command: $ => choice(
      $.check,
      $.eval,
      $.print,
      $.reduce,
      $.namespace,
      $.section,
      $.public_section,
      $.end,
      $.variable,
      $.universe,
      $.open,
      $.export,
      $.attribute_cmd,
      $.initialize,
      $.set_option,
      $.deriving_cmd,
      $.assert_cmd,
      $.decl_doc_cmd,
      $.grind_pattern_cmd,
      $.alias_cmd,
      $.notation_decl_cmd,
      $.syntax_cmd,
      $.macro_cmd,
      $.macro_rules_cmd,
      $.elab_rules_cmd,
      $.register_cmd,
      $.unif_hint_cmd,
      $.declare_syntax_cat_cmd,
      $.mutual,
      $.declaration,
    ),

    /* `mutual … end` groups mutually-recursive declarations. Like
       `namespace`/`section`/`end`, it is modeled as a flat marker
       rather than a nesting block: the inner declarations parse as
       siblings and the closing `end` is the ordinary `end` command.
       Pairing is left to tooling, consistent with the rest of the
       grammar (and avoids an `end`-disambiguation conflict). */
    declaration: $ => seq(
      optional($.attributes),
      optional($._visibility_mods),
      optional($.decl_modifiers),
      choice(
        $.def,
        $.theorem,
        $.example,
        $.abbrev,
        $.instance,
        $.axiom,
        $.opaque,
        $.constant,
        $.structure,
        $.inductive,
      ),
    ),

    /* Lean 4 module system visibility markers `public`/`meta` —
       structured separately from decl_modifiers to avoid conflict
       with the `import` prefix forms. May appear before or after
       decl_modifiers (`protected meta def …`). */
    _visibility_mods: $ => repeat1(choice($.public, $.meta)),

    _decl_universes: $ => seq(
      token.immediate('.{'),
      sep1(field('level', choice($.identifier, $.num_lit)), ','),
      '}',
    ),

    def: $ => prec.right(seq(
      'def',
      field('name', $.identifier),
      optional($._decl_universes),
      optional($._binders),
      optional($._type_spec),
      $._decl_val,
      optional($._deriving_clause),
    )),

    example: $ => seq(
      'example',
      optional($._binders),
      optional($._type_spec),
      $._decl_val,
    ),

    _deriving_clause: $ => seq('deriving', sep1($.identifier, ',')),

    /* A declaration body is either `:= term`, a sequence of match-
       style equations `| pat => body | …`, or a `where`-style struct
       body of `field := value` lines (instance/anonymous-structure
       def form). */
    _decl_val: $ => choice(
      seq(field('body', seq(':=', $._term)), optional($.where_decls)),
      seq(repeat1($.match_alt), optional($.where_decls)),
      seq($.where_struct, optional($.where_decls)),
    ),
    _type_spec: $ => field('type', seq(':', $._term)),

    /* `where f := v g := w …` body of a `def name : T where …` —
       declares a value of a structure/instance type by field. The
       indented form uses scanner-emitted INDENT/NEWLINE/DEDENT so a
       field whose RHS is a multi-line term doesn't accidentally
       swallow the next field's name. The body is optional: an empty
       `where` clause is legal when the structure has no fields.
       `where ...` is Lean's "fill all required fields with sorry"
       elision marker.

       The same `where` clause also introduces auxiliary helper
       definitions on a regular `def`/`theorem`:
         def f x := body
         where
           helper := …
           another | pat => …
       A `where_item` covers both forms: a struct field
       (`name [binders] := value`) or a function-style helper
       (`name | pat => … | pat => …`). */
    _binders: $ => alias(repeat1($._binder), $.binders),
    _binder_ident: $ => choice($.identifier, $.hole),

    _term: $ => choice($._lead_term, $._op_term),

    _lead_term: $ => choice(
      $.fun,
      $.let,
      $.have,
      $.suffices,
      $.by_cases,
      $.show,
      $.if_then_else,
      $.forall,
      $.exists,
      $.sigma,
      $.big_op_binder,
      $.by,
      $.do_block,
      $.match,
      $.tactic_case,
    ),

    _op_term: $ => choice(
      $._term_atom,
      $.app,
      $.proj,
      $.subscript,
      $.postfix_op,
      $.binary_op,
      $.unary_op,
      $.universe_app,
      $.induction,
    ),

    _term_atom: $ => choice(
      $.identifier,
      $.num_lit,
      $.scientific_lit,
      $.char_lit,
      $.str_lit,
      $.raw_string,
      $.interpolated_str,
      $.name_lit,
      $.hole,
      $.synth_hole,
      $.named_hole,
      $.cdot,
      $.dot_ident,
      $.type_const,
      $.sort_const,
      $.prop_const,
      $.true_const,
      $.false_const,
      $.bot_const,
      $.top_const,
      $.empty_const,
      $.goal_const,
      $.sorry,
      $.paren,
      $.anon_ctor,
      $.anon_subterm,
      $.quotient_lit,
      $.floor_lit,
      $.ceil_lit,
      $.norm_lit,
      $.dbl_angle_lit,
      $.list_lit,
      $.range_lit,
      $.array_lit,
      $.struct_lit,
      $.set_builder,
      $.subtype_lit,
      $.rest_pat,
      $.prec_annotated,
      $.pct_macro,
      $.antiquot,
      $.explicit_mode,
      $.quotation,
    ),

    /* `.foo` is Lean's anonymous-namespace projection (used for
       constructors and methods). Distinct from `e.foo` projection. */
    true_const:  _ => choice('True', 'true'),
    list_lit: $ => seq('[', sep0(choice($._term, $.star), ','), ']'),
    star: _ => '*',

    /* `[a : b]` or `[a : b : step]` — range/subarray slice. */
    app: $ => prec.left(PREC.app, seq(
      field('fn', $._op_term),
      field('arg', choice($._term_atom, $._lead_term)),
    )),

    let: $ => prec.right(seq(
      /* `letI` is Mathlib's "let instance" variant; `obtain` and
         `set` are tactic-language siblings for pattern-binding from
         a result. */
      choice('let', 'letI', 'obtain', 'set'),
      optional(choice('mut', 'rec')),
      field('name', choice(
        $._binder_ident,
        $.tuple_binder,
        $.anon_ctor_binder,
      )),
      /* `let rec foo (x : T) : U := …` — function-style binders. */
      optional($._binders),
      optional($._type_spec),
      choice(':=', '←', '<-'),
      field('value', $._term),
      optional(seq(';', field('body', $._term))),
    )),

    show: $ => prec.right(seq(
      'show',
      field('type', $._term),
      /* Bare `show T` is the tactic form (re-states the goal);
         `show T from e` / `show T by tac` are the term forms. */
      optional(choice(
        seq('from', field('value', $._term)),
        $.by,
      )),
    )),

    /* `if h : cond then a else b` — named hypothesis form. An
       optional `else` (for do-block `if cond then stmt`) was tried
       and abandoned twice: it splits LR states through the whole
       term grammar and generate runs for tens of minutes at
       multi-GB memory. Same for allowing `block_assign` in the
       branches. Do-block `if … then` without `else` therefore
       still parses with an error node. */
    by: $ => seq('by', $._block_body),
    do_block: $ => seq('do', $._block_body),

    _block_body: $ => choice(
      /* Inline `by tac; tac` and `do x; y` — multiple tactics
         separated by semicolons, all on one line. */
      prec.right(sep1(field('inline', $._term), ';')),
      seq(
        $._indent,
        sep1(field('stmt', choice($.block_assign, $._term)),
             choice(';', $._newline)),
        $._dedent,
      ),
    ),

    /* `x := v` mutation, valid only inside a do-block. */
    num_lit: _ => token(choice(
      /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
      /0[oO][0-7](_?[0-7])*/,
      /0[bB][01](_?[01])*/,
      /[0-9](_?[0-9])*/,
    )),

    str_lit: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        token.immediate(prec(1, /[^"\\]+/)),
      )),
      '"',
    ),

    identifier: $ => choice($._plain_ident, $._scanned_ident),
    _plain_ident: _ => /[a-zA-Z_][a-zA-Z_0-9'!?]*/,
  },
});
